Add schedule section

--- a/models/root.ini
+++ b/models/root.ini
@@ -18,6 +18,10 @@ type = markdown
 label = Venue
 type = markdown
 
+[fields.schedule]
+label = Schedule
+type = markdown
+
 [fields.speakers]
 label = Speakers
 type = flow
