Add speakers topic

--- a/flowblocks/speaker.ini
+++ b/flowblocks/speaker.ini
@@ -13,6 +13,11 @@ label = Name
 type = string
 width = 3/4
 
+[fields.topic]
+label = Topic
+type = string
+width = 3/4
+
 [fields.bio]
 label = Bio
 type = markdown
