--- a/models/root.ini
+++ b/models/root.ini
@@ -18,9 +18,30 @@ type = markdown
 label = Venue
 type = markdown
 
-[fields.schedule]
-label = Schedule
-type = markdown
+[fields.schedule_day_1]
+label = Schedule (Day 1)
+type = flow
+flow_blocks = timeslot
+
+[fields.schedule_day_2]
+label = Schedule (Day 2)
+type = flow
+flow_blocks = timeslot
+
+[fields.workshops_main]
+label = Workshops (Main Hall)
+type = flow
+flow_blocks = timeslot
+
+[fields.workshops_room_a]
+label = Workshops (Room A)
+type = flow
+flow_blocks = timeslot
+
+[fields.workshops_room_b]
+label = Workshops (Room B)
+type = flow
+flow_blocks = timeslot
 
 [fields.speakers]
 label = Speakers
