Add marketing partners layout

--- a/models/root.ini
+++ b/models/root.ini
@@ -62,3 +62,8 @@ flow_blocks = sponsor
 label = Bronze Sponsors
 type = flow
 flow_blocks = sponsor
+
+[fields.marketing_partners]
+label = Marketing Partners
+type = flow
+flow_blocks = marketing_partner
