Add Media Partner block and add Rappler as Media Partner

--- a/models/root.ini
+++ b/models/root.ini
@@ -67,3 +67,9 @@ flow_blocks = sponsor
 label = Marketing Partners
 type = flow
 flow_blocks = marketing_partner
+
+[fields.media_partners]
+label = Media Partners
+type = flow
+flow_blocks = media_partner
+
